--- a/app/views/order_mailer/order_email.html.erb
+++ b/app/views/order_mailer/order_email.html.erb
@@ -8,10 +8,13 @@
     <p>
       Someone wants a sandwich!<br/>
     </p>
-    <ul>
-      <li>Bread: <%= @order.bread.capitalize %></li>
-      <li>Meat: <%= @order.meat.capitalize %></li>
-      <li>Cheese: <%= @order.cheese.capitalize %></li>
+      <p>Bread: <b><%= @order.bread.capitalize %></b></p>
+      <p>Meat: <b><%= @order.meat.capitalize %></b></p>
+      <p>Cheese: <b><%= @order.cheese.capitalize %></b></p>
+    <p>Condiments:
+      <% @order.condiments.each do |condiment| %>
+        <li><b><%= condiment.name.capitalize %></b></li>
+      <% end %>
     </ul>
     </p>
     <p>Keep the great sammies coming!</p>
