--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,22 +1,41 @@
-<h1> New Order </h1>
+<h1> Create a Sandwich </h1>
 <%= form_for(@order) do |f| %>
   <h3>Bread:</h3>
   <%= f.radio_button :bread, :wheat %>
-  <%= f.label :bread, :wheat, value: :wheat %>
+  <%= f.label :bread, "Wheat", value: :wheat %>
   <%= f.radio_button :bread, :sourdough %>
-  <%= f.label :bread, :sourdough, value: :sourdough %>
+  <%= f.label :bread, "Sourdough", value: :sourdough %>
 
   <h3>Meat:</h3>
   <%= f.radio_button :meat, :turkey %>
-  <%= f.label :meat, :turkey, value: :turkey %>
+  <%= f.label :meat, "Turkey", value: :turkey %>
   <%= f.radio_button :meat, :tofu %>
-  <%= f.label :meat, :tofu, value: :tofu %>
+  <%= f.label :meat, "Tofu", value: :tofu %>
 
   <h3>Cheese:</h3>
   <%= f.radio_button :cheese, :muenster %>
-  <%= f.label :cheese, :muenster, value: :muenster %>
+  <%= f.label :cheese, "Muenster", value: :muenster %>
   <%= f.radio_button :cheese, :cheddar %>
-  <%= f.label :cheese, :cheddar, value: :cheddar %>
+  <%= f.label :cheese, "Cheddar", value: :cheddar %>
+
+  <h3>Extras:</h3>
+
+
+  <% Condiment.all.each do |condiment| %>
+    <%=
+      check_box_tag(
+        "order[condiment_ids][]", # input tag name
+        condiment.id, # value to upload
+        @order.condiment_ids.include?(condiment.id), # default on or off?
+        :id => "order_condiment_id_#{condiment.id}" # HTML id for label
+      )
+      %>
+     
+    <%= label_tag "order_condiment_id_#{condiment.id}", condiment.name.capitalize %>
+    <br>
+  <% end %>
+
+<%= hidden_field_tag "order[condiment_ids][]" %>
 
 
   <%= f.button "Order Now"%>
