adds quotes for inspiration

--- a/app/views/order_mailer/order_email.html.erb
+++ b/app/views/order_mailer/order_email.html.erb
@@ -19,6 +19,11 @@
         </ul>
         </p>
       <% end %>
+
+    "<%= @quote.body%>"
+    - <%= @quote.author %>
+
     <p>Keep the great sammies coming!</p>
+
   </body>
 </html>
