--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,12 @@
     <header class="navbar navbar-fixed-top">
       <nav class="navbar-inner">
         <div class="container">
-         
+          <ul class="hmenu nav">
+            <li><a href="/">Make Sandwich Version 1.0</a></li>
+            <%= render 'devise/menu/registration_items' %>
+            <%= render 'devise/menu/login_items' %>
+            <li><a href="/orders">My Order History</a></li>
+          </ul>  
         </div>
       </nav>
     </header>
