--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -35,6 +35,10 @@
   <% end %>
 
 <%= hidden_field_tag "order[condiment_ids][]" %>
+<% if user_signed_in? %>
+  <%= f.hidden_field :user_id, :value => current_user.id %>
+<% end %>
+
 
 
   <%= f.button "Order Now"%>
