--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -9,3 +9,17 @@
   .content {
     margin-top: 60px;
   }
+
+  .form {
+    background-color: #f0f0f0;
+    border-radius: 6px;
+    padding: 15px;
+    margin: 40px;
+  }
+
+input[type="radio"], label{
+ display:inline-block;
+ *display:inline/*For IE7*/
+ *zoom:1;
+ padding-right: 20px;
+}
