--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,10 +16,10 @@
       <nav class="navbar-inner">
         <div class="container">
           <ul class="hmenu nav">
-            <li><a href="/">Make Sandwich Version 1.0</a></li>
+            <li><a href="/">Make Sandwich</a></li>
             <%= render 'devise/menu/registration_items' %>
             <%= render 'devise/menu/login_items' %>
-            <li><a href="/orders">My Order History</a></li>
+            <%= render 'devise/menu/order_history' %>
           </ul>  
         </div>
       </nav>
