--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,22 +1,32 @@
 <h1> Create a Sandwich </h1>
-<%= form_for(@order) do |f| %>
+<div class="form">
+<%= form_for @order do |f| %>
   <h3>Bread:</h3>
   <%= f.radio_button :bread, :wheat %>
   <%= f.label :bread, "Wheat", value: :wheat %>
   <%= f.radio_button :bread, :sourdough %>
   <%= f.label :bread, "Sourdough", value: :sourdough %>
+  <%= f.radio_button :bread, :roll %>
+  <%= f.label :bread, "Roll", value: :roll %>
+  <%= f.radio_button :bread, :bagel %>
+  <%= f.label :bread, "Bagel", value: :bagel %>
 
-  <h3>Meat:</h3>
+
+  <h3>Meat/Protein:</h3>
   <%= f.radio_button :meat, :turkey %>
   <%= f.label :meat, "Turkey", value: :turkey %>
   <%= f.radio_button :meat, :tofu %>
+  <%= f.label :meat, "Ham", value: :ham %>
+  <%= f.radio_button :meat, :ham %>
   <%= f.label :meat, "Tofu", value: :tofu %>
 
   <h3>Cheese:</h3>
   <%= f.radio_button :cheese, :muenster %>
   <%= f.label :cheese, "Muenster", value: :muenster %>
-  <%= f.radio_button :cheese, :cheddar %>
-  <%= f.label :cheese, "Cheddar", value: :cheddar %>
+  <%= f.radio_button :cheese, :swiss %>
+  <%= f.label :cheese, "Swiss", value: :swiss %>
+  <%= f.radio_button :cheese, :vegan %>
+  <%= f.label :cheese, "Vegan Cheese", value: :vegan %>
 
   <h3>Extras:</h3>
 
@@ -34,12 +44,13 @@
     <br>
   <% end %>
 
-<%= hidden_field_tag "order[condiment_ids][]" %>
-<% if user_signed_in? %>
-  <%= f.hidden_field :user_id, :value => current_user.id %>
+  <%= hidden_field_tag "order[condiment_ids][]" %>
+  <% if user_signed_in? %>
+    <%= f.hidden_field :user_id, :value => current_user.id %>
+  <% end %>
+
+  
+  <br>
+  <%= f.submit "Order Now", class: "btn btn-large btn-primary"%>
 <% end %>
-
-
-
-  <%= f.button "Order Now"%>
-<% end %>
+</div>
