--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -51,6 +51,6 @@
 
   
   <br>
-  <%= f.submit "Order Now", class: "btn btn-large btn-primary"%>
+  <%= f.submit "Order Now", class: "btn btn-large btn-success"%>
 <% end %>
 </div>
