--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "Make Sandwich" %></title>
+<!--     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ -->    <title><%= content_for?(:title) ? yield(:title) : "Make Sandwich" %></title>
     <meta name="description" content="">
     <meta name="author" content="">
     <%= stylesheet_link_tag "application", :media => "all" %>
@@ -12,8 +12,8 @@
     <%= yield(:head) %>
   </head>
   <body>
-    <header class="navbar navbar-fixed-top">
-      <nav class="navbar-inner">
+    <header class="navbar navbar-inverse">
+      <nav class="navbar-inner" style="border-radius: 0px">
         <div class="container">
           <ul class="hmenu nav">
             <li><a href="/">Make Sandwich</a></li>
