--- a/app/views/order_mailer/order_email.text.erb
+++ b/app/views/order_mailer/order_email.text.erb
@@ -1,6 +1,6 @@
   New Sandwich Order!
  
-Someone wants a sandwich!
+<%= @order.user ? @order.user.email : "Someone"%> wants a sandwich!
 
 Bread: <%= @order.bread.capitalize %>
 Meat: <%= @order.meat.capitalize %>
