Submit to General Things

--- a/app/views/order_mailer/order_email.html.erb
+++ b/app/views/order_mailer/order_email.html.erb
@@ -25,5 +25,6 @@
 
     <p>Keep the great sammies coming!</p>
 
+    <i>Sent from <a href="http://make-sandwich-app.herokuapp.com/">Make Sandwich</a></i>
   </body>
 </html>
