--- a/app/views/order_mailer/order_email.text.erb
+++ b/app/views/order_mailer/order_email.text.erb
@@ -16,3 +16,5 @@ Cheese: <%= @order.cheese.capitalize %>
 - <%= @quote.author %>
 
 Keep the great sammies coming!
+
+Sent from <a href="http://make-sandwich-app.herokuapp.com/">Make Sandwich</a><
