--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -3,30 +3,30 @@
 <%= form_for @order do |f| %>
   <h3>Bread:</h3>
   <%= f.radio_button :bread, :wheat %>
-  <%= f.label :bread, "Wheat", value: :wheat %>
+  <%= f.label :bread, "Wheat", value: :wheat %><br>
   <%= f.radio_button :bread, :sourdough %>
-  <%= f.label :bread, "Sourdough", value: :sourdough %>
+  <%= f.label :bread, "Sourdough", value: :sourdough %><br>
   <%= f.radio_button :bread, :roll %>
-  <%= f.label :bread, "Roll", value: :roll %>
+  <%= f.label :bread, "Roll", value: :roll %><br>
   <%= f.radio_button :bread, :bagel %>
-  <%= f.label :bread, "Bagel", value: :bagel %>
+  <%= f.label :bread, "Bagel", value: :bagel %><br>
 
 
   <h3>Meat/Protein:</h3>
   <%= f.radio_button :meat, :turkey %>
-  <%= f.label :meat, "Turkey", value: :turkey %>
+  <%= f.label :meat, "Turkey", value: :turkey %><br>
   <%= f.radio_button :meat, :tofu %>
-  <%= f.label :meat, "Ham", value: :ham %>
+  <%= f.label :meat, "Ham", value: :ham %><br>
   <%= f.radio_button :meat, :ham %>
-  <%= f.label :meat, "Tofu", value: :tofu %>
+  <%= f.label :meat, "Tofu", value: :tofu %><br>
 
   <h3>Cheese:</h3>
   <%= f.radio_button :cheese, :muenster %>
-  <%= f.label :cheese, "Muenster", value: :muenster %>
+  <%= f.label :cheese, "Muenster", value: :muenster %><br>
   <%= f.radio_button :cheese, :swiss %>
-  <%= f.label :cheese, "Swiss", value: :swiss %>
+  <%= f.label :cheese, "Swiss", value: :swiss %><br>
   <%= f.radio_button :cheese, :vegan %>
-  <%= f.label :cheese, "Vegan Cheese", value: :vegan %>
+  <%= f.label :cheese, "Vegan Cheese", value: :vegan %><br>
 
   <h3>Extras:</h3>
 
