--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,6 +1,7 @@
 <h1> Create a Sandwich </h1>
 <div class="form">
 <%= form_for @order do |f| %>
+  <div class="order-section">
   <h3>Bread:</h3>
   <%= f.radio_button :bread, :wheat %>
   <%= f.label :bread, "Wheat", value: :wheat %><br>
@@ -10,24 +11,33 @@
   <%= f.label :bread, "Roll", value: :roll %><br>
   <%= f.radio_button :bread, :bagel %>
   <%= f.label :bread, "Bagel", value: :bagel %><br>
+  </div>
 
-
+  <div class="order-section">
   <h3>Meat/Protein:</h3>
   <%= f.radio_button :meat, :turkey %>
   <%= f.label :meat, "Turkey", value: :turkey %><br>
-  <%= f.radio_button :meat, :tofu %>
-  <%= f.label :meat, "Ham", value: :ham %><br>
   <%= f.radio_button :meat, :ham %>
+  <%= f.label :meat, "Ham", value: :ham %><br>
+  <%= f.radio_button :meat, :chicken %>
+  <%= f.label :meat, "Chicken", value: :chicken %><br>
+  <%= f.radio_button :meat, :tofu %>
   <%= f.label :meat, "Tofu", value: :tofu %><br>
+  </div>
 
+  <div class="order-section">
   <h3>Cheese:</h3>
   <%= f.radio_button :cheese, :muenster %>
   <%= f.label :cheese, "Muenster", value: :muenster %><br>
+  <%= f.radio_button :cheese, :cheddar %>
+  <%= f.label :cheese, "Cheddar", value: :cheddar %><br>
   <%= f.radio_button :cheese, :swiss %>
   <%= f.label :cheese, "Swiss", value: :swiss %><br>
   <%= f.radio_button :cheese, :vegan %>
   <%= f.label :cheese, "Vegan Cheese", value: :vegan %><br>
+  </div>
 
+  <div class="condiment-section">
   <h3>Extras:</h3>
 
   <% Condiment.all.each do |condiment| %>
@@ -43,6 +53,7 @@
     <%= label_tag "order_condiment_id_#{condiment.id}", condiment.name.capitalize %>
     <br>
   <% end %>
+  </div>
 
   <%= hidden_field_tag "order[condiment_ids][]" %>
   <% if user_signed_in? %>
